@@ -15,7 +15,7 @@
  '(midnight-mode t)
  '(package-selected-packages
    (quote
-    (helm-flycheck highlight-numbers dtrt-indent smartscan helm-ag helm-descbinds helm-swoop helm-bookmark helm-smex helm-ring helm-semantic helm-imenu helm-elisp helm-misc helm-man helm-grep helm-sys helm-mode helm-buffers helm-files exec-path-from-shell undo-tree vlf expand-region zenburn-theme yaml-mode yagist writegood-mode whole-line-or-region whitespace-cleanup-mode which-key wgrep-ag wc-mode volatile-highlights use-package uptimes thesaurus textile-mode sunrise-x-loop smex smarty-mode shell-pop scratch rpn-calc rainbow-delimiters pyvenv python-mode pyenv-mode-auto pip-requirements php-mode pdf-tools org-dashboard org-cliplink org-bullets no-littering mode-icons markdown-mode magithub magit-gh-pulls macrostep log4e load-dir jedi ivy-historian indent-guide ido-ubiquitous ido-at-point help-fns+ helm-projectile guide-key goto-chg google-this golden-ratio gitignore-mode github-issues github-clone gitconfig-mode git-timemachine git-messenger git-blamed gist fullframe framemove frame-cmds flycheck-pos-tip flycheck-color-mode-line flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff diredful dired-toggle-sudo dired-sort dired-ranger dired-rainbow dired-open dired-narrow dired-launch dired+ diff-hl deft dashboard cyberpunk-theme csv-nav csv-mode crux crontab-mode counsel company-shell company-quickhelp company-jedi company-irony company-anaconda bug-reference-github browse-kill-ring browse-at-remote bookmark+ beginend beacon batch-mode bash-completion avy auto-compile arduino-mode aggressive-indent ag))))
+    (dired-collapse dired-x dired helm-flycheck highlight-numbers dtrt-indent smartscan helm-ag helm-descbinds helm-swoop helm-bookmark helm-smex helm-ring helm-semantic helm-imenu helm-elisp helm-misc helm-man helm-grep helm-sys helm-mode helm-buffers helm-files exec-path-from-shell undo-tree vlf expand-region zenburn-theme yaml-mode yagist writegood-mode whole-line-or-region whitespace-cleanup-mode which-key wgrep-ag wc-mode volatile-highlights use-package uptimes thesaurus textile-mode sunrise-x-loop smex smarty-mode shell-pop scratch rpn-calc rainbow-delimiters pyvenv python-mode pyenv-mode-auto pip-requirements php-mode pdf-tools org-dashboard org-cliplink org-bullets no-littering mode-icons markdown-mode magithub magit-gh-pulls macrostep log4e load-dir jedi ivy-historian indent-guide ido-ubiquitous ido-at-point help-fns+ helm-projectile guide-key goto-chg google-this golden-ratio gitignore-mode github-issues github-clone gitconfig-mode git-timemachine git-messenger git-blamed gist fullframe framemove frame-cmds flycheck-pos-tip flycheck-color-mode-line flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff diredful dired-toggle-sudo dired-sort dired-ranger dired-rainbow dired-open dired-narrow dired-launch dired+ diff-hl deft dashboard cyberpunk-theme csv-nav csv-mode crux crontab-mode counsel company-shell company-quickhelp company-jedi company-irony company-anaconda bug-reference-github browse-kill-ring browse-at-remote bookmark+ beginend beacon batch-mode bash-completion avy auto-compile arduino-mode aggressive-indent ag))))
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
