@@ -9,6 +9,8 @@
 ;;; Code:
 
 (use-package markdown-mode
+  :ensure t
+  :defer t
   :mode
   "\\.md$"
   "\\.mdown$"
