@@ -1,5 +1,7 @@
 2017-08-31  Stephen Jenkins  <stephenearljenkins@gmail.com>
 
+	* init-misc-pkgs.el (drag-stuff): clean-up, defer, map to sej-mode-map
+
 	* init-helm.el: map to sej-mode-map & trim bindings
 
 	* init-goto-chg.el: map to sej-mode-map
